cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_02841_security-groups.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Create Security Groups for the AEM Stack
Outputs:
  AuthorPublishDispatcherSecurityGroup:
    Description: The Author Publish Dispatcher Security Group
    Export:
      Name:
        Fn::Sub: ${PrerequisitesStackPrefixParameter}-AuthorPublishDispatcherSecurityGroup
    Value:
      Ref: AuthorPublishDispatcherSecurityGroup
Parameters:
  AuthorPublishDispatcherSecurityGroupInboundCidrIpParameter:
    Description: AEM Author Publish Dispatcher ELB Security Group Inbound Cidr Ip
    Type: String
  NetworkStackPrefixParameter:
    Description: The AEM Stack Network Resources Stack Prefix
    Type: String
  PrerequisitesStackPrefixParameter:
    Description: The AEM Stack Prerequisite Resources Stack Prefix
    Type: String
Resources:
  AuthorPublishDispatcherSecurityGroup:
    Properties:
      GroupDescription: AEM Author Publish Dispatcher Security Group
      Tags:
      - Key: Name
        Value: AEM Author Publish Dispatcher Security Group
      - Key: StackPrefix
        Value:
          Ref: PrerequisitesStackPrefixParameter
      VpcId:
        Fn::ImportValue:
          Fn::Sub: ${NetworkStackPrefixParameter}-VPCId
    Type: AWS::EC2::SecurityGroup
  AuthorPublishDispatcherSecurityGroupIngress0:
    Properties:
      CidrIp:
        Ref: AuthorPublishDispatcherSecurityGroupInboundCidrIpParameter
      FromPort: '80'
      GroupId:
        Ref: AuthorPublishDispatcherSecurityGroup
      IpProtocol: tcp
      ToPort: '80'
    Type: AWS::EC2::SecurityGroupIngress
  AuthorPublishDispatcherSecurityGroupIngress1:
    Properties:
      CidrIp:
        Ref: AuthorPublishDispatcherSecurityGroupInboundCidrIpParameter
      FromPort: '443'
      GroupId:
        Ref: AuthorPublishDispatcherSecurityGroup
      IpProtocol: tcp
      ToPort: '443'
    Type: AWS::EC2::SecurityGroupIngress
  AuthorPublishDispatcherSecurityGroupIngress2:
    Properties:
      CidrIp:
        Ref: AuthorPublishDispatcherSecurityGroupInboundCidrIpParameter
      FromPort: '4502'
      GroupId:
        Ref: AuthorPublishDispatcherSecurityGroup
      IpProtocol: tcp
      ToPort: '4503'
    Type: AWS::EC2::SecurityGroupIngress
  AuthorPublishDispatcherSecurityGroupIngress3:
    Properties:
      CidrIp:
        Ref: AuthorPublishDispatcherSecurityGroupInboundCidrIpParameter
      FromPort: '5432'
      GroupId:
        Ref: AuthorPublishDispatcherSecurityGroup
      IpProtocol: tcp
      ToPort: '5433'
    Type: AWS::EC2::SecurityGroupIngress
